# easyprint

./: .gitignore  LICENSE  README.md  pyproject.toml
easyprint/: __init__.py  core.py
