[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jotprint" 
version = "0.1.0"
authors = [
  { name="Jotpartap Singh", email="jotsisi@iesvalldemossa.net" },
]
description = "Una forma sencilla de imprimir textos con separadores personalizados"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
